Update Dockerfile to modify ACTIVEMQ_OPTS