@@ -23,7 +23,7 @@ RUN echo "" >> "/srv/apache-activemq-${V}/bin/env"	\
  && echo 'ACTIVEMQ_OPTS="$ACTIVEMQ_OPTS -Dhawtio.authenticationEnabled=false"'	\
 	>> "/srv/apache-activemq-${V}/bin/env"
 
-RUN echo 'ACTIVEMQ_OPTS="$ACTIVEMQ_OPTS -javaagent:/srv/jmx-prom/agent.jar=9191:/srv/jmx-prom/config.yaml -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Dcom.sun.management.jmxremote.port=1099 -Dcom.sun.management.jmxremote.local.only=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false"'	>> "/srv/apache-activemq-${V}/bin/env"
+RUN echo 'ACTIVEMQ_OPTS="$ACTIVEMQ_OPTS -javaagent:/srv/jmx-prom/agent.jar=9191:/srv/jmx-prom/config.yaml -XX:+UnlockExperimentalVMOptions -XX:+UseContainerSupport -Dcom.sun.management.jmxremote.port=1099 -Dcom.sun.management.jmxremote.local.only=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false"'	>> "/srv/apache-activemq-${V}/bin/env"
 
 COPY topic_template.xml /srv/activemq/conf/topic.xml.template
 COPY streamcache.xml    /srv/activemq/conf/streamcache.xml
